--- a/telegram-printer-bot.service
+++ b/telegram-printer-bot.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=e
 WorkingDirectory=/home/e/telegram-printer-bot
-ExecStart=/usr/bin/python3 /home/e/pos/src/office-printer/telegram_printer_bot.py
+ExecStart=/home/e/telegram-printer-bot/run.sh
 Restart=on-failure
 RestartSec=10
 StandardOutput=append:/home/e/telegram-printer-bot/logs/output.log
